i need to change the navbar thats why i commit

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
      <div id="mainNavigation">
         <nav role="navigation">
-          <div class="py-3 text-center border-bottom">
+          <div class="text-center border-bottom">
             <img src="assets/img/logo/BLUE STAR LOGO.png" alt="" class="invert">
           </div>
         </nav>
-        <div class="navbar-expand-md">
+        <div class="navbar-expand-lg">
           <div class="navbar-dark text-center my-2">
             <button class="navbar-toggler w-75" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span> <span class="align-middle"></span>
