--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- css -->
     <link rel="stylesheet" href="assets/css/style.css">
-
+    <link rel="stylesheet" href="all.css">
     <!-- bootsrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -23,6 +23,10 @@
 
 </head>
 <body>
+  <i class="fa-solid fa-phone" style="    color: black;
+  font-size: 50px;
+  background: red;
+  position: fixed;"></i>
     <!-- header -->
     <header>
 
