product details not responsive ~ next make htaccess as dynamic

--- a/products/battery.html
+++ b/products/battery.html
@@ -93,13 +93,13 @@
     <div class="row">
 
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="card">
+        <div class="card" onclick="window.location.href='product-details'">
           <div class="img-div">
             <img src="../assets/img/gallery/products/battery/Acdelco-car battery.png" alt="" srcset="">
           </div>
           <div class="card-body">
             <div class="card-title">Acdelco-car battery</div>
-            <a href="" class="call-btn mx-auto">Call Now</a>
+            <a href="product-details" class="call-btn mx-auto">Call Now</a>
           </div>
         </div>
       </div>
