--- a/products/ac-parts.html
+++ b/products/ac-parts.html
@@ -70,7 +70,7 @@
                    </ul>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="contact">Contact</a>
+                   <a class="nav-link" href="../contact">Contact</a>
                  </li>
                </ul>
              </div>
