--- a/products/product-details.html
+++ b/products/product-details.html
@@ -25,6 +25,18 @@
     <!-- font-awesome cdn-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+<style>
+  .container.product-details .imgBx:before {
+    content: 'Acdelco';
+    position: absolute;
+    top: 0px;
+    left: 24px;
+    color: #000;
+    opacity: 0.2;
+    font-size: 5rem;
+    font-weight: 800;
+}
+</style>
 <body>
  <!-- header -->
     <header>
@@ -84,34 +96,36 @@
  <!-- banner END -->
 
 
- <!-- section-1 -->
- <section class="section-1 product-details">
-  <div class="container">
-    <div class="row">
-
-        <div class="card row">
-            <div class="img-section col-md-6">
-              <img src="../assets/img/gallery/products/battery/Acdelco-car battery.png" alt="">
-            </div>
-            <div class="text-section col-md-5">
-              <div class="part-1">
-                <div class="card-title">Acdelco-car battery</div>
-              <div class="sub-title">Battery</div>
-              <div class="short-desciption">
-                <p class="p"></p>
-              </div>
-              <div class="part-2">
-                <a href="" class="next">Next</a>
-                <a href="" class="call">Call</a>
-              </div>
-              </div>
-            </div>
-        </div>
-
-    </div>
+ <div class="container product-details mt-5 mb-5">
+  <div class="imgBx">
+      <img src="../assets/img/gallery/products/battery/Acdelco-car battery.png" alt="Nike Jordan Proto-Lyte Image">
   </div>
- </section>
- <!-- section-1 END -->
+  <div class="details">
+
+      <div class="content">
+        <div class="title-specs-div">
+          <h2>Acdelco-car battery<br>
+              <span>Battery</span>
+          </h2>
+          <p class="description">dvhsdinovhiofughi dusfgusdigiu dufgiudlsguhlsdgiurh isurgiurntiusnunghdvhsdinovhiofughi dusfgusdigiu dufgiudlsguhlsdg</p>
+          <h4 class="h4"><span>Brand</span>Acdelco</h4>
+          <h4 class="h4"><span>Weight</span>40kg</h4>
+          <h4 class="h4"><span>Diamension</span>L 21.26" W8.74" H9.45" Inches</h4>
+          <h4 class="h4"><span>Unit</span>40kg</h4>
+        </div>
+          <div class="buttons-div d-flex">
+            <button>Call Now</button>
+            <div class="pre-nxt-div">
+              <a class="prev" href=""><i class="fa-solid fa-backward"></i>Prev.</a>
+              <a class="next" href=""><i class="fa-solid fa-forward"></i>Next</a>
+            </div>
+          </div>
+      </div>
+
+  </div>
+</div>
+
+
 
 
 
